Thêm hiệu ứng chờ load cho trang web và thay icon cho các mục ở sidebar.

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -23,60 +23,46 @@
                 <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
                 <li class = "nav-item menu-open">
                     <a class = "nav-link" href = "#">
-                        <i class = "fas fa-circle nav-icon"></i>
-                        <p>
-                            System
-                            <i class = "right fas fa-angle-left"></i>
-                        </p>
+                        <i class = "fa-solid fa-gear"></i> &nbsp; <p>System</p>
                     </a>
                     <ul class = "nav nav-treeview">
                         <li class = "nav-item">
                             <a class = "nav-link" href = "/user">
-                                <i class = "far fa-circle nav-icon"></i>
-                                <p>User management</p>
+                                <i class = "fa-solid fa-user"></i> &nbsp; <p>User management</p>
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li class = "nav-item menu-open">
                     <a class = "nav-link" href = "#">
-                        <i class = "fas fa-circle nav-icon"></i>
-                        <p>
-                            Category
-                            <i class = "right fas fa-angle-left"></i>
-                        </p>
+                        <i class = "fa-solid fa-list"></i> &nbsp; <p>Category</p>
                     </a>
                     <ul class = "nav nav-treeview">
                         <li class = "nav-item">
                             <a class = "nav-link" href = "/warehouse">
-                                <i class = "far fa-circle nav-icon"></i>
-                                <p>Warehouse</p>
+                                <i class = "fa-solid fa-warehouse"></i> &nbsp; <p>Warehouse</p>
                             </a>
                         </li>
                         <li class = "nav-item">
                             <a class = "nav-link" href = "/product">
-                                <i class = "far fa-circle nav-icon"></i>
-                                <p>Product</p>
+                                <i class = "fa-solid fa-boxes-packing"></i> &nbsp; <p>Product</p>
                             </a>
                         </li>
                         <li class = "nav-item">
                             <a class = "nav-link" href = "/supplier">
-                                <i class = "far fa-circle nav-icon"></i>
-                                <p>Supplier</p>
+                                <i class = "fa-solid fa-truck-field"></i> &nbsp; <p>Supplier</p>
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li class = "nav-item">
                     <a class = "nav-link" href = "/inbound">
-                        <i class = "fas fa-circle nav-icon"></i>
-                        <p>Inbound</p>
+                        <i class = "fa-solid fa-right-to-bracket"></i> &nbsp; <p>Inbound</p>
                     </a>
                 </li>
                 <li class = "nav-item">
                     <a class = "nav-link" href = "/outbound">
-                        <i class = "fas fa-circle nav-icon"></i>
-                        <p>Outbound</p>
+                        <i class = "fa-solid fa-right-from-bracket"></i> &nbsp; <p>Outbound</p>
                     </a>
                 </li>
             </ul>
