--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -6,13 +6,22 @@
         <title layout:title-pattern = "$CONTENT_TITLE"></title>
         <link href = "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback" rel = "stylesheet">
         <link crossorigin = "anonymous" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity = "sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" referrerpolicy = "no-referrer" rel = "stylesheet"/>
-        <link href = "/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css" rel = "stylesheet">
         <link href = "/dist/css/adminlte.min.css" rel = "stylesheet">
+        <style>
+            .nav-treeview {
+                padding-left: 1rem !important;
+            }
+        </style>
     </head>
     <body class = "hold-transition sidebar-mini layout-fixed">
         <header th:replace = "~{fragments/navbar :: navbar}"></header>
         <aside th:replace = "~{fragments/sidebar :: sidebar}"></aside>
-        <section layout:fragment = "content"></section>
+        <div class = "wrapper">
+            <div class = "preloader" style = "display: flex; justify-content: center; align-items: center">
+                <img alt = "NTTeMOILogo" height = "50" src = "/images/NTTeMOILogo.png" width = "50">
+            </div>
+            <section layout:fragment = "content"></section>
+        </div>
 
         <script src = "/plugins/jquery/jquery.min.js"></script>
         <script src = "/plugins/jquery-ui/jquery-ui.min.js"></script>
@@ -21,7 +30,6 @@
         </script>
         <script crossorigin = "anonymous" integrity = "sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" src = "https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
         <script crossorigin = "anonymous" integrity = "sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" src = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-        <script src = "/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
         <script src = "/dist/js/adminlte.min.js"></script>
         <script>
             document.addEventListener('DOMContentLoaded', function () {
