--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <section layout:fragment = "content">
+            <div class = "preloader" style = "display: flex; justify-content: center; align-items: center">
+                <img alt = "NTTeMOILogo" height = "50" src = "/images/NTTeMOILogo.png" width = "50">
+            </div>
             <div class = "content-wrapper">
                 <div class = "content-header">
                     <div class = "container-fluid">
