--- a/src/main/resources/templates/add-inbound-details.html
+++ b/src/main/resources/templates/add-inbound-details.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en" layout:decorate = "~{layout}" xmlns:layout = "http://www.ultraq.net.nz/thymeleaf/layout">
     <head>
-        <title>Add inbound details</title>
+        <title>[[${title}]] inbound details</title>
     </head>
     <body>
         <section layout:fragment = "content">
@@ -10,13 +10,14 @@
                     <div class = "container-fluid">
                         <div class = "row mb-2">
                             <div class = "col-sm-6">
-                                <h1 class = "m-0">Add inbound details</h1>
+                                <h1 class = "m-0">[[${title}]] inbound details</h1>
                             </div>
                             <div class = "col-sm-6">
                                 <ol class = "breadcrumb float-sm-right">
                                     <li class = "breadcrumb-item"><a href = "/">Home</a></li>
                                     <li class = "breadcrumb-item"><a href = "/inbound">Inbound</a></li>
-                                    <li class = "breadcrumb-item active">Details</li>
+                                    <li class = "breadcrumb-item">Details</li>
+                                    <li class = "breadcrumb-item active">[[${title}]]</li>
                                 </ol>
                             </div>
                         </div>
@@ -57,6 +58,14 @@
                                                 <label for = "damagedQuantity">Damaged Quantity</label>
                                                 <input class = "form-control" id = "damagedQuantity" min = "0" required th:field = "*{damaged}" type = "number">
                                                 <div th:errors = "*{damaged}" th:if = "${#fields.hasErrors('damaged')}"></div>
+                                            </div>
+                                            <div class = "form-group">
+                                                <label for = "statusSelect">Status</label>
+                                                <select class = "form-control" id = "statusSelect" required th:field = "*{status}">
+                                                    <option value = "Active">Active</option>
+                                                    <option value = "Inactive">Inactive</option>
+                                                </select>
+                                                <div th:errors = "*{status}" th:if = "${#fields.hasErrors('status')}"></div>
                                             </div>
                                             <div class = "text-center mt-4">
                                                 <button class = "btn btn-primary" type = "submit">Save</button>
