--- a/src/main/resources/templates/add-supplier.html
+++ b/src/main/resources/templates/add-supplier.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en" layout:decorate = "~{layout}" xmlns:layout = "http://www.ultraq.net.nz/thymeleaf/layout">
     <head>
-        <title>Add supplier</title>
+        <title>[[${title}]] supplier</title>
     </head>
     <body>
         <section layout:fragment = "content">
@@ -10,13 +10,13 @@
                     <div class = "container-fluid">
                         <div class = "row mb-2">
                             <div class = "col-sm-6">
-                                <h1 class = "m-0">Add supplier</h1>
+                                <h1 class = "m-0">[[${title}]] supplier</h1>
                             </div>
                             <div class = "col-sm-6">
                                 <ol class = "breadcrumb float-sm-right">
                                     <li class = "breadcrumb-item"><a href = "/">Home</a></li>
                                     <li class = "breadcrumb-item"><a href = "/supplier">Supplier</a></li>
-                                    <li class = "breadcrumb-item active">Add</li>
+                                    <li class = "breadcrumb-item active">[[${title}]]</li>
                                 </ol>
                             </div>
                         </div>
