--- a/src/main/resources/templates/fragments/searchForm.html
+++ b/src/main/resources/templates/fragments/searchForm.html
@@ -1,21 +1,15 @@
 <div class = "mb-4" th:fragment = "searchForm(url)">
-    <form id = "searchForm" th:action = "@{'/' + ${url}}">
-        <div class = "row align-items-center">
-            <div class = "col-md-11">
-                <div class = "input-group">
-                    <input aria-label = "Search" class = "form-control" id = "keyword" name = "keyword" placeholder = "Enter keyword" type = "search">
-                    <div class = "input-group-append">
-                        <button aria-label = "Search" class = "btn btn-primary" type = "submit">
-                            <i class = "fa-solid fa-magnifying-glass"></i>
-                        </button>
-                    </div>
-                </div>
+    <form class = "form-inline" id = "searchForm" th:action = "@{'/' + ${url}}">
+        <div class = "input-group w-100">
+            <input aria-label = "Search" class = "form-control mr-2" id = "keyword" name = "keyword" th:placeholder = "'Search by ' + ${filter}" type = "search">
+            <div class = "input-group-append">
+                <button aria-label = "Search" class = "btn btn-primary" type = "submit">
+                    <i class = "fa-solid fa-magnifying-glass"></i>
+                </button>
             </div>
-            <div class = "col-md-1 text-right">
-                <a aria-label = "Add New" class = "btn btn-success" th:href = "@{'/' + ${url} + '/new'}">
-                    <i class = "fa-solid fa-plus"></i>
-                </a>
-            </div>
+            <a aria-label = "Add New" class = "btn btn-success ml-2" th:href = "@{'/' + ${url} + '/new'}">
+                <i class = "fa-solid fa-plus"></i>
+            </a>
         </div>
     </form>
 </div>
